# MyNovel

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
.codex/environments/: environment.toml
.github/workflows/: ci.yml  release.yml
docs/research/: ai-novel-writing-tools.md
frontend/: electron-builder.yml  eslint.config.js  index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.electron.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: prepare-fixture.py  setup-gate.spec.ts  workbench.spec.ts
frontend/electron/: backend.ts  main.ts
frontend/src/: main.tsx
frontend/tests/: ai-waiting-indicator.test.tsx  api.test.ts  app-shell.test.tsx  blueprint-page.test.tsx  (+12 more)
tests/: test_api_routes.py  test_blueprint_revision.py  test_book_abandonment.py  test_book_state_api.py  test_chapter_api.py  test_chapter_review_ui.py  test_cli.py  test_db.py  test_desktop_release.py  test_dev_seed.py  test_dev_server.py  test_dev_server_canon_proposal.py  test_dev_stack.py  test_dynamic_ui_regressions.py  test_frontend_tooling.py  test_github_actions.py  test_legacy_cleanup.py  test_llm_streams.py  test_no_old_user_pages.py  test_no_placeholder_assets.py  test_open_book_api.py  test_package.py  test_product_canon_ui.py  test_product_regressions.py  test_product_ui.py  test_provider_config_api.py  test_provider_config_server.py  test_provider_config_validation.py  test_quality_ui.py  test_secondary_api.py  test_static_server.py  test_update_check.py  test_update_ui.py  test_word_targets.py  test_workbench_api.py
(+176 files in other folders)
