[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mynovel"
version = "0.1.0"
description = "Local AI-led web novel production pipeline with human review gates."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "sqlmodel>=0.0.22",
  "typer>=0.12",
  "pyyaml>=6.0",
]

[project.scripts]
mynovel = "mynovel.cli:app"

[tool.setuptools.package-data]
mynovel = ["prompts/assets/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
