[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mynovel"
version = "0.1.0"
description = "Local AI-led web novel production pipeline with human review gates."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "sqlmodel>=0.0.22",
  "typer>=0.12",
  "pyyaml>=6.0",
]

[project.scripts]
mynovel = "mynovel.cli:app"
mynovel-dev = "mynovel.dev_server:main"
mynovel-desktop = "mynovel.desktop:main"

[tool.setuptools.package-data]
mynovel = ["prompts/assets/*.yaml", "frontend/dist/index.html", "frontend/dist/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
exclude = ["build/"]
